--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Hexadecimal: #333390;
 RGB: rgb(260, 260, 200); 1º Red 2º Green 3ºBlue
 Nomes: red green blue 
 */
-
+a
 
 /*Especificando elementos por sua cadeia de marcações 
 nesse caso estamos dizendo para pintar de vermelho todas
